--- a/bash/all.html
+++ b/bash/all.html
@@ -1,7 +1,7 @@
 <h2>Команды</h2>
 <h3>ls</h3>
 <ul>
-    <li><code>-a</code> — выводит список всех файлов каталога, в том числе скрытые файлы. <code>..</code> и <code>.</code> в верхней части списка относятся к каталогу на уровень выше текущего и текущему, соответственно;</li>
+    <li><code>-a</code> — выводит список всех файлов каталога, в том числе скрытые файлы. <code>..</code> и <code>.</code> в верхней части списка относятся к каталогу на уровень выше текущего и текущему, соответственно; Переведено из мануала: <q>Не игнорировать записи начинающиеся с .</q></li>
     <li><code>-l</code> — выводит информацию о содержимом каталога, включая права доступа, владельца, группу, размер, время создания, является ли файл символьной ссылкой на другой файл и на какой именно;</li>
     <li><code>-F</code> — добавляет символ в конце строк вывода: <code>/</code> — означает каталог, <code>@</code> — символьную ссылку на другой файл и <code>*</code> — означает, что файл является исполняемым;</li>
     <li><code>-r</code> — выводит список содержимого каталога в обратном порядке;</li>
@@ -167,7 +167,8 @@ less -I -p void *.c					# Case insensitive search for "void" in all .c files</pr
 <p><code>rm -r ./*</code> — рекурсивно удалить всё из папки (не удаляет .htaccess)</p>
 <p><code>rm .htaccess</code> — удалить файл .htaccess</p>
 <p><code>rm -rf mydir</code> — рекурсивно удалить без подтверждения и кода ошибочного завершения файл (или директорию) mydir.</p>
-Если файлов много, то либо с xargs: ls -1 /path/to/files/ | xargs -I rm /path/to/files/{}
+<p>Если файлов много, то с <var>xargs</var>: <code class="copyToClipboard">ls -1 /path/to/files/ | xargs -I rm /path/to/files/{}</code></p>
+<p>Если среди файлов есть такие, у которых имя начинается с точек, то в <var>ls</var> передаем параметр <var>A</var>: <code class="copyToClipboard">ls -A1 /path/to/files/ | xargs -I rm /path/to/files/{}</code></p>
 <h3>mv</h3>
 <ul>
     <li><code>–f</code>, не запрашивать подтверждения операций.</li>
