--- a/git/all.html
+++ b/git/all.html
@@ -153,6 +153,10 @@ $ git branch -d testing</pre>
 <p>— создать метку tag для текущего состояния (на текущей ветке) с именем tagname.</p>
 <pre>$ git tag -d tagname</pre>
 <p>— удалить метку tag с именем tagname</p>
+<h2>Настройки</h2>
+<h3>Origin репозиторий без ssl сертификата =)</h3>
+<p><code>git init</code> (т.к. это настройка репы:)</p>
+<p><code class="copyToClipboard">git config http.sslVerify "false"</code></p>
 <h2>Отменить</h2>
 <h3>Отменить fetch</h3>
 <pre class="prettyprint lang-bsh">
