--- a/sublime-text-3/all.html
+++ b/sublime-text-3/all.html
@@ -152,6 +152,7 @@
             "phpConfigFile": "php.ini"
         }
 </pre>
+<p>Чтобы зареиндексить SublimeCodeIntel необходимо удалить файлы В папке: <code class="copyToClipboard">rm -rf ~/.codeintel/db/*</code></p>
 <h3>Tag</h3>
 <p> — закрывать тэг по /, отступы (автоматическая расстановка отступов просто ужасная)
     <del>использую</del> из-за отличной работы с атрибутами тегов;</p>
