--- a/sql/all.html
+++ b/sql/all.html
@@ -338,7 +338,21 @@ SELECT @@tx_isolation;</pre>
 <p><code>SELECT… LOCK IN SHARE MODE</code> — блокирует считываемые строки на запись.</p>
 <p>Другие сессии могут читать, но ждут окончания транзакции для изменения затронутых строк. Если же в момент такого SELECT'а строка уже изменена другой транзакцией, но еще не зафиксирована, то запрос ждет окончания транзакции и затем читает свежие данные. Данная конструкция нужна, как правило, для того чтобы получить свежайшие данные (независимо от времени жизни транзакции) и заодно убедиться в том, что их никто не изменит.</p>
 <p><code>SELECT… FOR UPDATE</code> — блокирует считываемые строки на чтение. Точно такую же блокировку ставит обычный UPDATE, когда считывает данные для обновления.</p>
-<h2>Console</h2>
+<h3>Примеры</h3>
+<pre class="prettyprint lang-sql">
+BEGIN
+  DECLARE CONTINUE HANDLER FOR SQLEXCEPTION
+  BEGIN
+    ROLLBACK;
+    RESIGNAL;
+  END;
+  START TRANSACTION;
+  INSERT ...
+  INSERT ...
+  COMMIT;
+END;
+</pre>
+<h2>Консоль</h2>
 <h3>mysql</h3>
 <pre lang="prettyprint lang-sh">
 # Полные имена параметров
