--- a/rails/all.html
+++ b/rails/all.html
@@ -1,11 +1,15 @@
 <h2>rails - фреймворк ruby</h2>
 
 <h3>Приложение</h3>
-<p><code class="copyToClipboard">rails new testApp</code></p>
-<p><code class="copyToClipboard">rails s</code></p>
-<p><code class="copyToClipboard">rails s -d</code></p>
+<p><code class="copyToClipboard">rails new testApp</code> - создание нового приложения.</p>
+<p><code class="copyToClipboard">rails s</code> - запуск приложения.</p>
+<p><code class="copyToClipboard">rails s -d</code> - запуск как демона.</p>
+<p><code class="copyToClipboard">rails s -b 0.0.0.0</code> - запуск с доступом извне.</p>
 <p><code class="copyToClipboard">ps aux | grep process_name</code></p>
 <p><code class="copyToClipboard">kill -9 process_id</code></p>
+<h4>Отладка</h4>
+<p><code class="copyToClipboard">byebug</code> - код останова (подключить гем <code>gem 'byebug'</code> в гемфайле).</p>
+<p><code class="copyToClipboard">rails c</code> - консоль приложения (после останова в консоли доступны переменные...).</p>
 
 <h3>CRUD (scaffold)</h3>
 <p><code class="copyToClipboard">rails g controller controller_name action_name</code></p>
@@ -15,3 +19,7 @@
 <h3>Задачи (task)</h3>
 <p><code>rails g task convertings test_tab_and_ajson</code></p>
 <p><code>rails convertings:test_tab_and_ajson</code></p>
+
+<h2>Slimrb</h2>
+<h3>slim to rb</h3>
+<p><code class="prettyprint lang-sh copyToClipboard">slimrb -e 'index.html.slim' > index.html.erb</code></p>
