--- a/ruby/all.html
+++ b/ruby/all.html
@@ -77,7 +77,6 @@ p arr
 
 <h3>Хэши</h3>
 <pre class="prettyprint lang-rb">
-# Хэши
 h = {
   :r =&gt; &quot;Камень&quot;,
   :arr =&gt; arr,
@@ -86,23 +85,32 @@ h = {
   0 =&gt; ['asd'],
 }
 p h
+
+# Добавить новый элемент
 h[3] = '3'
 # h[:mike] = 'test'
 p h
 p h[:Mike]
+
+# Имеется ли элемент с ключем
 if h.key? :mike
   p h[:mike]
 end
 p h[0]
 p h[3]
 
+# Перебор
 h.each do |key,value|
   print key.to_s + ' - '
   print value.to_s
   print &quot;\n&quot;
 end
 
+# Количество элементов
 p h.count
+
+# Удалить элемент с ключем :a
+h.delete("a")
 </pre>
 
 <h3>Куча</h3>
