--- a/semantic-ui/all.html
+++ b/semantic-ui/all.html
@@ -23,3 +23,4 @@
 
 <h2>Примеры</h2>
 <p><a href="examples/grid.html" target="q">Сетка</a></p>
+<p><a href="examples/menu.html" target="q">Меню</a></p>
