--- a/bash/all.html
+++ b/bash/all.html
@@ -317,6 +317,13 @@ $ scp ?
 <p><strong>Примеры</strong></p>
 <pre>user@server ~/some/path/from/user/folder $ pwd
 /home/user/some/path/from/user/folder</pre>
+<h2>Работа с окнами</h2>
+<pre class="prettyprint lang-sh">
+screen
+screen -r
+screen -r 2398.pts-0.webtest
+</pre>
+<p><kbd>Ctrl + A, D</kbd> - выйти из сессии</p>
 <h2>Наработки</h2>
 <h3>Убить процесс</h3>
 <p><code class="copyToClipboard">kill -9 process_id</code></p>
